Fixed issue with single elimination results not showing on the phone.

--- a/client/src/app/draws/single-elimination-bracket/single-elimination-bracket.component.scss
+++ b/client/src/app/draws/single-elimination-bracket/single-elimination-bracket.component.scss
@@ -3,7 +3,7 @@
 .se-bracket-panel {
   overflow: auto;
   width: 100%;
-  //border: 1px solid limegreen;
+  background-color: white;
 }
 
 div.round-header-container {
